--- a/Universidade/Universidade.csproj
+++ b/Universidade/Universidade.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Home\Privacy.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.11">
       <TreatAsUsed>true</TreatAsUsed>
     </PackageReference>
